# knowledge-graph

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
.specify/: data-extraction-process.md  diagnostic-knowledge-graph-implementation-plan.md  diagnostic-knowledge-graph-spec.md  diagnostic-knowledge-graph-tasks.md
.specify/memory/: constitution.md
release/: physics-v4.manifest.json  physics-v4.snapshot.json
src/jee_rag_knowledge_graph/: __init__.py  config.py  exceptions.py  main.py
src/jee_rag_knowledge_graph/community/: __init__.py
src/jee_rag_knowledge_graph/diagnosis/: retrieve.py
src/jee_rag_knowledge_graph/domain/: models.py  serialization.py  validation.py
src/jee_rag_knowledge_graph/graph/: validate.py
src/jee_rag_knowledge_graph/ingestion/: normalize.py  physics_corpus.py  reference_corpus.py
src/jee_rag_knowledge_graph/output/: __init__.py  format.py
src/knowledge_graph/: config.py  main.py  pipeline.py
terraform/: dynamodb.tf  iam.tf  main.tf  outputs.tf  s3.tf  terraform.tfvars.example  variables.tf
terraform/bootstrap/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: __init__.py  sample_data.py  test_cli.py  test_domain.py  test_grounding.py  test_hardening.py  test_ingestion.py  test_physics_corpus.py  test_pipeline.py  test_storage.py  test_visual_corpus.py  test_visual_interpretation.py  test_visualization.py
tests/fixtures/: evaluation_cases.json  physics_solutions_sample.md  sample_syllabus.md
visualizations/physics-v4/: physics-v4.html  physics-v4.json
(+33 files in other folders)
