[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "knowledge-graph"
version = "0.1.0"
description = "A Poetry-managed Python project for knowledge graph work."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "knowledge_graph", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
ruff = "^0.6.0"

[tool.poetry.scripts]
knowledge-graph = "knowledge_graph.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

